Fix formatting and layout issues in Index.html and styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,72 +203,3 @@ h3 {
 }
 
 
-/** Nosotros **/
-
-.nosotros {
-    grid-template-rows: repeat(2, auto);
-    /* Crea una cuadrícula con dos filas de alto igual. */
-    display: grid;
-        /* Establece el contenedor de la cuadrícula como un elemento de cuadrícula. */
-        
-}
-
-@media (width >= 768px) {
-    .nosotros{
-
-        grid-template-columns: repeat(2, 1fr);
-        /* Crea una cuadrícula con dos columnas de ancho igual. */
-        gap: 2rem;
-        /* Establece un espacio entre los elementos de la cuadrícula de 2rem. */
-    }
-}
-
-.nosotros__imagen {
-    grid-row: 1/2;
-    /* Establece la posición de la fila de la cuadrícula de la imagen.  de arriba a abajo empieza en 1 y se va hasta el 2 por eso pusimos 1/2 */
-    /* Establece el ancho de la imagen del producto al 100% del contenedor padre para que se ajuste automáticamente al tamaño de la pantalla. */
-}
-
-@media (width >= 768px) {
-    .nosotros__imagen {
-        grid-column: 2 / 3;
-        /* Establece la posición de la columna de la cuadrícula de la imagen. de izquierda a derecha empieza en 2 y se va hasta el 3 por eso pusimos 2/3 */
-    }
-}
-
-/** bloques **/
-
-.bloques{
-    display: grid; /*Hacemos que los bloques sean un grid*/
-    grid-template-columns: repeat(2, 1fr); /*Hacemos que los bloques sean de dos columnas*/
-    row-gap: 1rem; /*Hacemos que los bloques tengan un espacio de 1rem entre ellos*/
-    gap: 2rem; /*Hacemos que los bloques tengan un espacio de 2rem entre ellos*/
-}
-
-@media (width >= 768px) {
-
-    .bloques{
-        grid-template-columns: repeat(4, 1fr); /*Hacemos que los bloques sean de una columna*/
-    }
-}
-
-.bloque{
-    text-align: center; /*Centramos el texto de los bloques*/
-}
-
-
-
-.bloque__titulo{
-    margin: 0; /*Quitamos el margen del titulo*/
-}
-
-/** PAgina del producto **/
-
-@media ( width >= 768px) { /*Si la pantalla es mayor a 768px nueva sintaxis*/
-    .camisa{
-        display: grid; /*Hacemos que los bloques sean un grid*/
-        grid-template-columns: repeat(2, 1fr); /*Hacemos que los bloques sean de dos columnas*/
-        gap: 3rem; /*Hacemos que los bloques tengan un espacio de 2rem entre ellos*/
-    }
-}
-
